<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>cs210</groupId>
	<artifactId>project</artifactId>
	<version>22.8.1</version>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<configuration>
					<trimStackTrace>true</trimStackTrace>
					<printSummary>true</printSummary>
					<properties>
                    <configurationParameters>
						junit.jupiter.testinstance.lifecycle.default = per_class
						junit.jupiter.execution.parallel.enabled = false
						junit.jupiter.execution.parallel.mode.default = same_thread
						junit.jupiter.execution.parallel.mode.classes.default = concurrent
                    </configurationParameters>
                </properties>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Module 7 -->
		<dependency>
			<groupId>jakarta.json</groupId>
			<artifactId>jakarta.json-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.parsson</groupId>
		    <artifactId>parsson</artifactId>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>5.9.0</version>
			</dependency>
			<dependency>
				<groupId>jakarta.json</groupId>
				<artifactId>jakarta.json-api</artifactId>
				<version>2.1.1</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.parsson</groupId>
				<artifactId>parsson</artifactId>
				<version>1.1.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<properties>
		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
	</properties>
</project>
